intel/bench_214/extr_.reactosdllwin32usp10bidi.c_resolveResolved_with_main/log.txt
bench_214/extr_.reactosdllwin32usp10bidi.c_resolveResolved_with_main/extr_.reactosdllwin32usp10bidi.c_resolveResolved_with_main.c:6:13: error: redeclaration of C++ built-in type 'bool'
typedef int bool;
            ^
bench_214/extr_.reactosdllwin32usp10bidi.c_resolveResolved_with_main/extr_.reactosdllwin32usp10bidi.c_resolveResolved_with_main.c:16:19: error: default initialization of an object of const type 'const scalar_t__' (aka 'const int')
 scalar_t__ const B ; 
                  ^
                    = 0
bench_214/extr_.reactosdllwin32usp10bidi.c_resolveResolved_with_main/extr_.reactosdllwin32usp10bidi.c_resolveResolved_with_main.c:17:19: error: default initialization of an object of const type 'const scalar_t__' (aka 'const int')
 scalar_t__ const BN ; 
                  ^
                     = 0
bench_214/extr_.reactosdllwin32usp10bidi.c_resolveResolved_with_main/extr_.reactosdllwin32usp10bidi.c_resolveResolved_with_main.c:18:19: error: default initialization of an object of const type 'const scalar_t__' (aka 'const int')
 scalar_t__ const FSI ; 
                  ^
                      = 0
bench_214/extr_.reactosdllwin32usp10bidi.c_resolveResolved_with_main/extr_.reactosdllwin32usp10bidi.c_resolveResolved_with_main.c:19:19: error: default initialization of an object of const type 'const scalar_t__' (aka 'const int')
 scalar_t__ const LRE ; 
                  ^
                      = 0
bench_214/extr_.reactosdllwin32usp10bidi.c_resolveResolved_with_main/extr_.reactosdllwin32usp10bidi.c_resolveResolved_with_main.c:20:19: error: default initialization of an object of const type 'const scalar_t__' (aka 'const int')
 scalar_t__ const LRI ; 
                  ^
                      = 0
bench_214/extr_.reactosdllwin32usp10bidi.c_resolveResolved_with_main/extr_.reactosdllwin32usp10bidi.c_resolveResolved_with_main.c:21:19: error: default initialization of an object of const type 'const scalar_t__' (aka 'const int')
 scalar_t__ const LRO ; 
                  ^
                      = 0
bench_214/extr_.reactosdllwin32usp10bidi.c_resolveResolved_with_main/extr_.reactosdllwin32usp10bidi.c_resolveResolved_with_main.c:22:19: error: default initialization of an object of const type 'const scalar_t__' (aka 'const int')
 scalar_t__ const PDF ; 
                  ^
                      = 0
bench_214/extr_.reactosdllwin32usp10bidi.c_resolveResolved_with_main/extr_.reactosdllwin32usp10bidi.c_resolveResolved_with_main.c:23:19: error: default initialization of an object of const type 'const scalar_t__' (aka 'const int')
 scalar_t__ const PDI ; 
                  ^
                      = 0
bench_214/extr_.reactosdllwin32usp10bidi.c_resolveResolved_with_main/extr_.reactosdllwin32usp10bidi.c_resolveResolved_with_main.c:24:19: error: default initialization of an object of const type 'const scalar_t__' (aka 'const int')
 scalar_t__ const RLE ; 
                  ^
                      = 0
bench_214/extr_.reactosdllwin32usp10bidi.c_resolveResolved_with_main/extr_.reactosdllwin32usp10bidi.c_resolveResolved_with_main.c:25:19: error: default initialization of an object of const type 'const scalar_t__' (aka 'const int')
 scalar_t__ const RLI ; 
                  ^
                      = 0
bench_214/extr_.reactosdllwin32usp10bidi.c_resolveResolved_with_main/extr_.reactosdllwin32usp10bidi.c_resolveResolved_with_main.c:26:19: error: default initialization of an object of const type 'const scalar_t__' (aka 'const int')
 scalar_t__ const RLO ; 
                  ^
                      = 0
bench_214/extr_.reactosdllwin32usp10bidi.c_resolveResolved_with_main/extr_.reactosdllwin32usp10bidi.c_resolveResolved_with_main.c:27:19: error: default initialization of an object of const type 'const scalar_t__' (aka 'const int')
 scalar_t__ const S ; 
                  ^
                    = 0
bench_214/extr_.reactosdllwin32usp10bidi.c_resolveResolved_with_main/extr_.reactosdllwin32usp10bidi.c_resolveResolved_with_main.c:28:19: error: default initialization of an object of const type 'const scalar_t__' (aka 'const int')
 scalar_t__ const WS ; 
                  ^
                     = 0
14 errors generated.
HLS FPGA Parse FAILED.
